// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NamespaceSelectFilter /> renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              All namespaces
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> when clicked renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control Select__control--menu-is-open css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              All namespaces
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-namespace-select-filter-listbox"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="react-select-namespace-select-filter-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Select__menu-portal css-yj2v5g"
  >
    <div
      class="NamespaceSelectFilterMenu theme-dark namespace-select-filter-options Select__menu css-26l3qy-menu"
      id="react-select-namespace-select-filter-listbox"
    >
      <div
        class="Select__menu-list Select__menu-list--is-multi css-4ljt47-MenuList"
      >
        <div
          aria-disabled="false"
          class="Select__option Select__option--is-focused css-1n7v3ny-option"
          id="react-select-namespace-select-filter-option-0"
          tabindex="-1"
        >
          All Namespaces
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-1"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              default
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-default-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-2"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-kube-system-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-3"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system-2
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-kube-system-2-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> when clicked when 'kube-system' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              Namespace: kube-system
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> when clicked when 'kube-system' is clicked when clicked again renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control Select__control--menu-is-open css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              Namespace: kube-system
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-namespace-select-filter-listbox"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="react-select-namespace-select-filter-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Select__menu-portal css-yj2v5g"
  >
    <div
      class="NamespaceSelectFilterMenu theme-dark namespace-select-filter-options Select__menu css-26l3qy-menu"
      id="react-select-namespace-select-filter-listbox"
    >
      <div
        class="Select__menu-list Select__menu-list--is-multi css-4ljt47-MenuList"
      >
        <div
          aria-disabled="false"
          class="Select__option Select__option--is-focused css-1n7v3ny-option"
          id="react-select-namespace-select-filter-option-0"
          tabindex="-1"
        >
          All Namespaces
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-1"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-kube-system-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-2"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              default
            </span>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-3"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system-2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> when clicked when 'kube-system' is clicked when clicked again when 'default' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              Namespace: default
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<NamespaceSelectFilter /> when clicked when 'kube-system' is clicked when clicked again when 'default' is clicked when clicked again, then holding down multi select key, and then clicking 'kube-system-2' when 'kube-system-2' is clicked renders 1`] = `
<body>
  <div>
    <div
      class="NamespaceSelectFilterParent"
      data-testid="namespace-select-filter"
    >
      <div
        class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-namespace-select-filter-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="Select__control Select__control--menu-is-open css-1s2u09g-control"
        >
          <div
            class="Select__value-container Select__value-container--is-multi css-319lph-ValueContainer"
          >
            <div
              class="Select__placeholder css-14el2xx-placeholder"
              id="react-select-namespace-select-filter-placeholder"
            >
              Namespaces: default, kube-system-2
            </div>
            <div
              class="Select__input-container css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-select-namespace-select-filter-listbox"
                aria-describedby="react-select-namespace-select-filter-placeholder"
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="react-select-namespace-select-filter-listbox"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="Select__input"
                id="namespace-select-filter"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="Select__indicator-separator css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="Select__indicator Select__dropdown-indicator css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Select__menu-portal css-yj2v5g"
  >
    <div
      class="NamespaceSelectFilterMenu theme-dark namespace-select-filter-options Select__menu css-26l3qy-menu"
      id="react-select-namespace-select-filter-listbox"
    >
      <div
        class="Select__menu-list Select__menu-list--is-multi css-4ljt47-MenuList"
      >
        <div
          aria-disabled="false"
          class="Select__option Select__option--is-focused css-1n7v3ny-option"
          id="react-select-namespace-select-filter-option-0"
          tabindex="-1"
        >
          All Namespaces
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-1"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              default
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-default-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-2"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system
            </span>
          </div>
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-yt9ioa-option"
          id="react-select-namespace-select-filter-option-3"
          tabindex="-1"
        >
          <div
            class="flex gaps align-center"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="layers"
              >
                layers
              </span>
            </i>
            <span>
              kube-system-2
            </span>
            <i
              class="Icon box right material focusable small"
              data-testid="namespace-select-filter-option-kube-system-2-selected"
            >
              <span
                class="icon"
                data-icon-name="check"
              >
                check
              </span>
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
